--- a/src/styles.css
+++ b/src/styles.css
@@ -8,9 +8,10 @@ body {
     height: 100vh;
 }
 
-@media (max-width: 600px) {
-  
+.app-container {
+    padding: 0 5rem;
 }
+
 
 .header {
     margin-top: 2rem;
@@ -69,8 +70,18 @@ body {
     font-size: 1rem;
 }
 
-/* TEMPLATE */
+/* COMMON */
 .button {
+    background-color: #567257;
+    color: white;
+    margin-top: 0.5rem;
+    padding: 0.8rem 1rem;
+    border: none;
+    border-radius: 4px;
+    font-weight: bold;
+}
+
+.long-button {
     background-color: #567257;
     color: white;
     margin-top: 10px;
@@ -81,8 +92,10 @@ body {
     font-weight: bold;
 }
 
-.button:hover {
-    background-color: #3B4E3C;
+.text-button {
+    background: none;
+    border: none;
+    color: #896A58;
 }
 
 .main-text {
@@ -92,6 +105,14 @@ body {
     color: #ACAB9E;
 }
 
+.title-text {
+    color: #896A58;
+
+}
+
+.word-text {
+    color: black;
+}
 .error {
     color: red;
 }
@@ -100,16 +121,41 @@ body {
     color: #567257;
     cursor: pointer;
 }
+/* Layout */
+.center-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
+
+/* Hovering */
 .link:hover {
     color: #3B4E3C;
     text-decoration: underline;
 }
 
-.center-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.role-btn:hover, .role-btn.selected, .nav-text:hover,
+.category-card:hover {
+    background-color: #3B4E3C;
+    color: white;
+}
+
+.side-link:hover, .logout-btn:hover {
+    background-color: white;
+    color: #567257;
+}
+
+.button:hover {
+    background-color: #3B4E3C;
+}
+
+.hamburger:hover {
+    color: #3B4E3C;
+}
+
+.text-button:hover {
+    color: #6E584A;
 }
 
 .error-overlay, .modal-overlay {
@@ -198,16 +244,6 @@ body {
     justify-content: center;
 }
 
-.role-btn:hover {
-    background-color: #3B4E3C;
-    color: white;
-}
-
-.role-btn.selected {
-    background-color: #567257;
-    color: white;
-}
-
 .fa-users, .fa-user-tie, .fa-triangle-exclamation {
     transform: scale(2);
 }
@@ -215,3 +251,843 @@ body {
 .password-requirements {
     width: 16rem;
 }
+
+.site-header{
+    color: white;
+    padding: 1rem;
+    text-align: center;
+}
+
+.header-container, .footer-container {
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.logo-img {
+    transform: scale(0.7);
+    display: block;
+    object-fit: contain;
+}
+
+
+.site-header {
+    color: #567257;
+    display: flex;
+    justify-content: space-between;
+    padding: 0;
+    padding-left: 1rem;
+    position: relative;
+}
+
+.title-container {
+    display: flex;
+    align-items: center;
+
+}
+
+
+.nav-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 2rem;
+    gap: 1rem;
+}
+
+.nav-btn {
+    text-decoration: none;
+    color: #567257;
+    padding: 2rem 1rem;
+}
+
+
+.hamburger {
+    background: white;
+    column-rule: #567257;
+    border: none;
+    font-size: 1.5rem;
+    display: none;
+    padding-right: 2rem;
+}
+
+
+.sidebar {
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 240px;
+    height: 100vh;
+    background-color: #567257;
+    display: flex;
+    flex-direction: column;
+    padding-top: 2rem;
+    z-index: 999;
+    animation: slideIn 0.3s ease forwards;
+}
+
+@keyframes slideIn {
+    from { transform: translateX(100%); }
+    to   { transform: translateX(0); }
+}
+
+.sidebar {
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 240px;
+    height: 100vh;
+    background-color: #567257;
+    display: flex;
+    flex-direction: column;
+    padding-top: 2rem;
+    z-index: 999;
+    animation: slideIn 0.3s ease forwards;
+}
+
+@keyframes slideIn {
+    from { transform: translateX(100%); }
+    to   { transform: translateX(0); }
+}
+
+.logout-btn {
+    border: none;
+    background: none;
+}
+.side-link, .logout-btn {
+    text-decoration: none;
+    color: white;
+    padding: 0.5rem 2rem;
+    text-align: left;
+}
+
+
+.landing-text-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1rem 0rem;
+}
+
+.landing-text-container h3 {
+    font-size: 4rem;
+    color: #896A58;
+}
+
+.landing-text-container span {
+    color: #567257;
+}
+
+.landing-text-container p {
+    font-size: 2rem;
+    text-align: right;
+}
+.landing-text-container .hero-text {
+    color: #896A58;
+}
+
+.ad1 {
+    height: 24rem;
+    width: 44rem;
+}
+.ad2, .ad3 {
+    height: 11.5rem;
+    width: 22rem;
+}
+
+.ad-col {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+}
+
+.ad-row {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+}
+
+.ad-container {
+    display: flex;
+    padding: 4rem 0rem;
+    align-items: center;
+    justify-content: center;
+}
+
+.search-bar {
+    color: #896A58;
+    border: 1px solid #896A58;
+    padding: 1rem 1rem;
+    border-radius: 10px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.search-input {
+    border: none;
+    outline: none;
+}
+
+
+
+.search-bar .left-wrapper {
+    display: flex;
+    gap: 0.5rem;
+}
+
+
+.category-container, .new-arrivals-container, .top-sell-container {
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 2rem;
+}
+
+.category-list {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 1rem;
+}
+
+.category-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 1rem 1rem;
+    width: 5rem;
+    height: 5rem;
+}
+
+.fa-kitchen-set, .fa-shirt, .fa-paintbrush,
+.fa-prescription-bottle-medical,
+.fa-utensils, .fa-computer, .fa-seedling, .fa-bone{
+    font-size: large;
+}
+
+.category-name {
+    text-align: center;
+}
+
+.title-container2 {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.product-container {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+}
+
+.product-details {
+    display: flex;
+    flex-direction: column;
+    padding: 1rem 1rem;
+}
+.product-card {
+    box-shadow: 0px 2px 4px -2px rgba(0,0,0,0.75);
+    border-radius:8px;
+    flex: 0 0 15rem;
+}
+
+.img-container {
+  width: 100%;
+  aspect-ratio: 1 / 1;     
+  overflow: hidden;  
+  border-radius: 8px 8px 0px 0px;    
+  position: relative;
+}
+
+.img-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;   
+}
+
+.product-card p, .product-card h3 {
+    margin: 0;
+}
+
+.card-overlay {
+    position: absolute;
+    inset: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    justify-content: center;
+    align-items: center;
+    padding: 0rem 1rem;
+    background-color: #56725754;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+}
+
+.card-overlay:hover {
+    opacity: 1;
+}
+
+.price-container {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+    align-items: baseline;
+    margin-top: 0.5rem;
+    
+}
+
+#product-ori-price {
+    font-size: 1.1rem;
+    color: #ACAB9E;
+    text-decoration-line: line-through;
+}
+
+.product-info {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.product-tags {
+    margin-top: 0.5rem;
+}
+#hashtags {
+    border: 1px solid #567257;
+    display: inline-block;
+    padding: 0.2rem 0.2rem;
+    border-radius: 4px;
+    margin: 0.2rem;
+}
+.about-container {
+    display: flex;
+    flex-direction: column;
+    font-weight: normal;
+}
+
+.about-row {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.about-row h2 {
+    color: #896A58;
+    font-family: 'Times New Roman', Times, serif;
+    width: 40%;
+    font-size: 2rem;
+    padding-left: 8rem;
+}
+
+.gif1 {
+    border: none;
+    padding-top: 1rem;
+    padding-right: 3rem;
+    position: absolute;
+    z-index: -1;
+    right: 0;
+    transform: scale(3);
+}
+
+.gif2 {
+    border: none;
+    position: absolute;
+    z-index: -1;
+    left: 0;
+    padding: 10rem 1rem;
+    transform: scale(2);
+}
+
+.about-container p {
+    text-align: left;
+    display: flex;
+    flex-grow: 1;
+    width: 40%;
+    margin-left: 25%;
+    line-height: 1.5rem;
+}
+
+.features-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 8rem;
+    gap: 2rem;
+}
+
+.feature-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 2rem 2rem;
+    width: 8rem;
+    height: 8rem;
+    gap: 0.5rem;
+    border-radius: 10px;
+    box-shadow: 2px 3px 9px -2px rgba(0,0,0,0.75);
+}
+
+.feature-card:hover {
+    transform: scale(1.2);
+}
+
+.feature-card h4, .feature-card p {
+    margin: 0;
+    padding: 0;
+    text-align: center;
+}
+
+.more-about-container {
+    padding: 1rem 0rem;
+    text-align: right;
+}
+
+.collab-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-top: 2rem;
+}
+
+.collab-container p {
+    width: 60%;
+   
+}
+
+.membership-container, .ambassador-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin: 2rem;
+}
+
+.membership-container {
+    gap: 6rem;
+}
+
+.ambassador-container {
+    gap: 4rem;
+    padding: 0rem 2rem;
+}
+
+.member-card,.ambassador-card {
+    background-color: #D9D8D5;
+    border: 1px solid #567257;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 1rem;
+}
+
+.member-card {
+    flex-direction: row;
+    gap: 2.5rem;
+    padding: 0.4rem 1.5rem;
+}
+
+.member-card:hover, .ambassador-card:hover {
+    transform: scale(1.1);
+
+} 
+
+.ambassador-card {
+    flex-direction: column;
+    gap: 0rem;
+    padding: 0.8rem 4rem;
+    width: 30%;
+}
+
+.ambassador-card h3 {
+    margin: 0;
+    padding-top: 1rem;
+    font-size: 1.5rem;
+}
+
+.ambassador-card p {
+    line-height: 1.5rem;
+}
+
+.left-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.right-card {
+    display: flex;
+    flex-direction: column;
+}
+
+.number-list {
+    display: flex;
+    flex-direction: row;
+    gap: 0.5rem;
+    align-items: baseline;
+}
+
+.fa-circle-check {
+    font-size: 1rem;
+}
+
+.ambassador-desc {
+    text-align: right;
+}
+
+.contact-container {
+    display: flex;
+    flex-direction: row;
+    background-color: #567257;
+    color: white;
+    margin-top: 3rem;
+    padding: 2rem 5rem;
+    gap: 10rem;
+}
+
+.right-contact form {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+}
+.right-contact input {
+    padding: 0.5rem;
+}
+
+.messages {
+    height: 8rem;
+}
+
+.newsletter-container {
+    display: flex;
+    flex-direction: row;
+    gap: 5rem;
+    padding: 2rem 4rem;
+    justify-content: space-between;
+}
+
+.left-news {
+    padding: 4rem 0rem;
+    display: flex;
+    flex-direction: column;
+}
+
+.left-news input {
+    padding: 0.5rem 1rem;
+    width: 100%;
+}
+
+.right-news p, .right-news h1 {
+    text-align: right;
+}
+
+.site-footer {
+    background-color: #3B4E3C;
+    color: white;
+    padding: 2rem 4rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.footer-row {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+    padding-top: 1rem;
+}
+.footer-content {
+    display: flex;
+    flex-direction: row;
+    gap: 5rem;
+}
+
+.footer-logo {
+    display: flex;
+    flex-direction: row;
+}
+
+.footer-text {
+    margin: 0;
+}
+.license {
+    text-align: right;
+    font-size: 0.6rem;
+}
+
+.fa-brands {
+    font-size: 2rem;
+}
+
+.profile-btn, .cart-btn {
+    background: none;
+    border: none;
+    padding: 2rem 1.5rem;
+}
+.profile-btn:hover, .cart-btn:hover {
+    background-color: #3B4E3C;
+    color: white;
+}
+
+.cart-count-badge {
+    position: absolute;
+    top: 58px;
+    right: 100px;
+    background-color: #3B4E3C;
+    color: white;
+    border-radius: 50%;
+    padding: 3px 5px;
+    font-size: 0.5rem;
+}
+
+.section-container {
+    display: flex;
+    flex-direction: row;
+    padding: 3rem 0rem;
+    gap: 2rem;
+}
+
+.section-menu {
+    display: flex;
+    flex-direction: column;
+
+}
+
+.section-menu button {
+    background: none;
+    border: none;
+    padding: 1rem 2rem;
+    text-align: left;
+}
+
+.section-menu button:hover {
+    background-color: #567257;
+    color: white;
+}
+
+.section-container button .active {
+    background-color: #567257;
+    color: white;
+}
+
+.section-title {
+    font-size: 1.5rem;
+    margin: 0;
+}
+
+.section-content {
+    display: flex;
+    flex-direction: column;
+    padding: 2rem 10rem;
+    gap: 1rem;
+    box-shadow: 2px 2px 6px -2px rgba(0,0,0,0.75);
+}
+
+.user-profile-form {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.form-content {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+    background-color: yellow;
+}
+
+.labels-col, .inputs-col {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    background-color: blue;
+}
+
+.user-profile-form label {
+    text-align: right;
+    margin-right: 1rem;
+    color: #ACAB9E;
+    padding: 0.5rem 0rem;
+}
+
+.edit-mode input {
+    background: none;
+    border: 1px solid #567257;
+    border-radius: 4px;
+    padding: 0.5rem 1rem;
+    width: 20rem;
+}
+
+.view-mode input {
+    color: black;
+    background: none;
+    border: none;
+    padding: 0.5rem 1rem;
+    cursor: not-allowed;
+}
+
+
+/*Responsive design: MEDIUM OR TAB*/
+@media (max-width: 1000px) {
+    body {
+        font-size: 0.8rem;
+    }
+
+    .button {
+        padding: 0.8rem 1rem;
+    }
+
+    .nav-btn, .nav-container .fa-cart-shopping, .nav-container .fa-user, 
+    .profile-btn, .cart-btn, .cart-count-badge {
+        display: none
+    }
+
+    .hamburger {
+        display: flex;
+    }
+    
+    .landing-text-container {
+        justify-content: space-between;
+        gap: 1rem;
+    }
+
+    .landing-text-container h3 {
+        font-size: 1.5rem;
+    }
+
+    .landing-text-container p {
+        font-size: 1rem;
+    }
+
+    .ad1 {
+    height: 14rem;
+    width: 20rem;
+    }
+    .ad2, .ad3 {
+        height: 6.5rem;
+        width: 9rem;
+    }
+
+    .category-list {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr); 
+        justify-content: center;
+    }
+
+    .category-card {
+        flex-direction: row;
+        width: auto;
+        gap: 2rem;
+        padding: 0.1rem 1rem;
+    }
+
+    .about-row {
+        justify-content: flex-start;
+    }
+    
+    .about-row h2 {
+        width: 50%;
+        font-size: 1.2rem;
+        padding-left: 1rem;
+    }
+    .gif1 {
+        right: 0;
+        transform: scale(1.5);
+        padding: 0;
+    }
+
+    .gif2 {
+        transform: scale(1);
+        padding-left: 0;
+        padding-top: 22rem;
+    }
+
+    .about-container p {
+        width: 60%;
+        padding-top: 3rem;
+    }
+
+    .features-container {
+        flex-direction: column;
+    }
+
+    .feature-card {
+        width: 70vw;
+        padding: 0.5rem 1rem;
+    }
+
+    .feature-card p {
+        width: 50vw;
+    }
+
+    .collab-container p {
+        width: 90%;
+    }
+
+    .membership-container {
+        flex-direction: column;
+    }
+
+    .ambassador-container {
+        flex-direction: column-reverse;
+        margin: 0;
+    }
+
+    .member-card {
+        width: 100%;
+    }
+    .ambassador-card {
+        width: 100%;
+        height: 30%;
+    }
+
+    .number-list {
+        text-align: left;
+    }
+
+    .contact-container {
+        flex-direction: column;
+        gap: 1rem;
+    }
+
+    .left-news {
+        padding: 8rem 0rem;
+    }
+
+    .footer-content {
+        gap: 1rem;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr); 
+    }
+
+    .product-card {
+        flex: 0 0 10rem;
+    }
+
+    .price-container, .product-info {
+        flex-direction: column;
+        gap: 0;
+    }
+
+    .product-container {
+        flex-direction: column;
+        flex: wrap; 
+    }
+
+    .section-container {
+        padding: 2rem 0rem;
+    }
+    .section-menu button {
+        padding: 0.5rem 1rem;
+    }
+    .section-title {
+        font-size: 1.2rem;
+    }
+}
+
