--- a/src/styles.css
+++ b/src/styles.css
@@ -525,7 +525,7 @@ body {
 .product-card {
     box-shadow: 0px 2px 4px -2px rgba(0,0,0,0.75);
     border-radius:8px;
-    flex: 0 0 15rem;
+    flex: 0 0 14rem;
 }
 
 .img-container {
@@ -1048,7 +1048,7 @@ input[type="email"]:disabled, input[type="password"]:disabled,
 
 .filter-title {
     font-weight: bold;
-    margin-top: 0.5rem;
+    margin-top: 1rem;
 }
 .filter-input {
     width: 7rem;
@@ -1096,6 +1096,18 @@ input[type="email"]:disabled, input[type="password"]:disabled,
 .search-result-title span:hover {
     text-decoration: underline;
     color: #3B4E3C;
+}
+
+.back-btn {
+    background: none;
+    border: none;
+    font-weight: bold;
+    color: #896A58;
+    font-size: 1rem;
+}
+
+.back-btn:hover {
+    text-decoration: underline;
 }
 /*Responsive design: MEDIUM OR TAB*/
 @media (max-width: 1000px) {
