--- a/src/styles.css
+++ b/src/styles.css
@@ -1027,6 +1027,7 @@ input[type="email"]:disabled, input[type="password"]:disabled,
     flex-direction: row;
     margin: 2rem 2rem;
     gap: 5rem;
+    justify-content: center;
 }
 
 .shop-content {
@@ -1108,6 +1109,273 @@ input[type="email"]:disabled, input[type="password"]:disabled,
 
 .back-btn:hover {
     text-decoration: underline;
+}
+
+.details-container {
+    display: flex;
+    flex-direction: row;
+    gap: 2rem;
+    padding: 2rem 0rem;
+    
+}
+
+.details-container p {
+    margin: 0;
+}
+
+.left-details, .right-details {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+}
+
+.left-details {
+    flex-shrink: 0
+}
+
+.right-details {
+    padding-top: 6rem;
+}
+.seller-container, .ship-container {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+    align-items: baseline;
+}
+
+.fa-shop, .fa-truck {
+    margin: 0;
+    font-size: 1rem;
+}
+
+.p-name, .p-category {
+    margin: 0;
+}
+
+.p-category {
+    color: #896A58;
+}
+
+.p-name {
+    font-size: 1.5rem;
+    font-weight: 400;
+    color: black;
+    margin-top: 0.2rem;
+}
+
+#p-price, #p-ori-price {
+    margin: 0;
+    font-size: 1.5rem;
+}
+
+#p-ori-price {
+    color: #ACAB9E;
+    text-decoration: line-through;
+}
+
+#p-tag {
+    margin: 0;
+}
+
+.variation-buttons {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); 
+    gap: 1rem;
+}
+
+
+
+.variation-btn {
+    background: none;
+    border: 1px solid #567257;
+    color: #567257;
+    padding: 0.5rem 1rem;
+    border-radius: 4px;
+    transition: all 0.2s ease;
+}
+
+.variation-btn.selected {
+    background-color: #3B4E3C;
+    color: white;
+    border: none;
+    opacity: 1;
+}
+
+.variation-btn.out-of-stock:not(.selected) {
+    color: white;
+    border: none;
+    background-color: #567257;
+    opacity: 0.5;
+    cursor: not-allowed;
+}
+
+.variation-title {
+    margin: 0;
+    padding-top: 0.5rem;
+    margin: 0.5rem;
+}
+.p-img-container {      
+  background: #f5f5f5;
+  border-radius: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;         
+  aspect-ratio: 1 / 1;
+  flex-shrink: 0;      
+  overflow: hidden;
+}
+
+.p-img-contianer img {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: cover;
+  display: block;
+}
+
+.details-action {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 4rem;
+    margin-top: 2rem;
+    align-items: baseline;
+}
+
+.left-selector {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+    align-items: baseline;
+}
+.qty-btn {
+    font-size: 1.5rem;
+    background: none;
+    color: #567257;
+    border: 1px solid #567257;
+    width: 2rem;
+    height: 2rem;
+} 
+
+.qty-btn:hover {
+    background-color: #567257;
+    color: white;
+}
+
+.qty-value {
+    padding: 0rem 1rem;
+    font-size: 1rem;
+}
+
+.add-cart-btn {
+    border: none;
+    background-color: #896A58;
+    color: white;
+    border-radius: 4px;
+    padding: 0.5rem 1rem;
+        font-weight: bold;
+}
+
+.add-cart-btn:hover {
+    background-color: #6E584A;
+}
+
+.p-info-tabs {
+    width: 100%;
+    display: flex;
+}
+
+.tab {
+    flex: 1;
+    font-weight: bold;
+    background: none;
+    color: #896A58;
+    border: none;
+    padding: 0.5rem 2rem;
+    font-size: medium;
+}
+
+.tab.active {
+    color: #567257;
+    box-shadow: inset 0 -1px 0 0 #567257;
+}
+
+.review-header {
+    display: flex;
+    flex-direction: row;
+    gap: 1.5rem;
+    align-items: baseline;
+    font-size: 1.5rem;
+    margin: 1rem 0rem;
+}
+
+.review-rate {
+    margin: 0;
+    font-weight: bold;
+}
+
+.review-filter {
+    display: flex;
+    flex-direction: row;
+    justify-content: baseline;
+    gap: 0.5rem;
+}
+
+.review-btn, .review-dropdown {
+    color: #567257;
+    padding: 0.4rem 0.6rem;
+    background: none;
+    border-radius: 4px;
+}
+
+.review-btn {
+    border: 1px solid #567257;
+}
+
+.review-content {
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: 1rem;
+}
+
+.comment-container {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 1rem;
+    border: 1px solid #ACAB9E;
+    border-radius: 4px;
+}
+
+.comment-title {
+    display: flex;
+    align-items: baseline;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.comment-container h5, .comment-container p {
+    margin: 0;
+}
+
+.comment-container h5, .comment-time, .comment-text {
+    color: black;
+}
+
+
+.star-group1, .star-group2 {
+    display: flex;
+    flex-direction: row;
+    gap: 0.2rem;
+}
+
+.star-group2 {
+    color: #ACAB9E;
+}
+
+.review-img-container img {
+    width: 50%;
+    height: 100%;
 }
 /*Responsive design: MEDIUM OR TAB*/
 @media (max-width: 1000px) {
@@ -1286,6 +1554,20 @@ input[type="email"]:disabled, input[type="password"]:disabled,
     
     .product-result {
         grid-template-columns: repeat(2, 1fr); 
+    }
+
+    .details-container {
+        flex-direction: column;
+        gap: 1rem;
+    }
+
+    .right-details {
+        padding-top: 1rem;
+    }
+
+    .review-header {
+        flex-direction: column;
+        gap: 0.5rem;
     }
 }
 
