--- a/src/styles.css
+++ b/src/styles.css
@@ -12,6 +12,12 @@ html, body {
     padding: 0 5rem;
 }
 
+.web-disclaimer {
+    display: block;
+    background-color: #3B4E3C;
+    color: white;
+    padding-left: 1rem;
+}
 
 .header {
     margin-top: 2rem;
@@ -243,12 +249,6 @@ html, body {
     display: grid;
     grid-template-columns: 1fr 2fr 1fr;
     width: 40rem;
-}
-
-
-
-.voucher-card h4, .voucher-card p{
-    margin: 0;
 }
 
 .voucher-row {
@@ -556,7 +556,10 @@ html, body {
 .search-input {
     border: none;
     outline: none;
+    width: 70vw;
+    background: none;
 }
+
 
 
 .search-bar .left-wrapper {
@@ -641,7 +644,11 @@ html, body {
   object-fit: contain;   
 }
 
-.product-card p, .product-card h3 {
+.product-card p, .product-card h3, .voucher-card h4, .voucher-card p,
+.member-card-container h3, .member-card-container p,
+.payment-method-title, .pm-row p,
+.pts-overlay p, .pts-overlay i, .tips-section p,
+.tips-section h3 {
     margin: 0;
 }
 
@@ -698,6 +705,8 @@ html, body {
     display: flex;
     flex-direction: column;
     font-weight: normal;
+    position: relative;
+
 }
 
 .about-row {
@@ -712,25 +721,35 @@ html, body {
     width: 40%;
     font-size: 2rem;
     padding-left: 8rem;
+    
 }
 
 .gif1 {
+  
+    width: 600px;
+    height: 600px;
     border: none;
-    padding-top: 1rem;
-    padding-right: 3rem;
+    right: 0;
+    top: 1px;
     position: absolute;
     z-index: -1;
-    right: 0;
-    transform: scale(3);
+    margin-left: 100px;
+    margin-bottom: 100px;
+    transform: scale(0.5);
 }
 
 .gif2 {
+    width: 600px;
+    height:600px;
     border: none;
     position: absolute;
     z-index: -1;
     left: 0;
-    padding: 10rem 1rem;
-    transform: scale(2);
+    top: 1px;
+    margin-right: 20px;
+    padding-right: 300px;
+    margin-bottom: 100px;
+    transform: scale(0.5);
 }
 
 .about-container p {
@@ -756,8 +775,8 @@ html, body {
     justify-content: center;
     align-items: center;
     padding: 2rem 2rem;
-    width: 8rem;
-    height: 8rem;
+    width: 9rem;
+    height: 9rem;
     gap: 0.5rem;
     border-radius: 10px;
     box-shadow: 2px 3px 9px -2px rgba(0,0,0,0.75);
@@ -1011,6 +1030,7 @@ html, body {
 .section-title {
     margin: 0;
     padding-bottom: 1rem;
+    font-size: 2rem;
 }
 
 .section-content {
@@ -1155,6 +1175,7 @@ input[type="email"]:disabled, input[type="password"]:disabled,
     border-radius: 4px;
     border: 1px solid #6E584A;
 }
+
 
 .tags-dropdown {
     color: #6E584A;
@@ -1393,6 +1414,14 @@ input[type="email"]:disabled, input[type="password"]:disabled,
     border-radius: 4px;
     padding: 1rem 1.2rem;
     font-weight: bold;
+}
+
+.add-cart-btn:disabled {
+    background-color: #896a5889;
+}
+
+.add-cart-btn:disabled:hover {
+     background-color: #896a5889;
 }
 
 .add-cart-btn:hover, .checkout-btn:hover {
@@ -2036,6 +2065,416 @@ input[type="email"]:disabled, input[type="password"]:disabled,
 .join-btn {
     cursor: none;
 }
+
+.flex-row {
+    display: flex;
+    flex-direction: row;
+}
+
+.flex-column {
+    display: flex;
+    flex-direction: column;
+}
+
+
+.about-app {
+    padding: 3rem;
+    margin: 4rem 0;
+    gap: 3rem;
+    justify-content: space-evenly;
+}
+
+.about-logo {
+    height: 4rem;
+    width: 4rem;
+    padding-top: 1.6rem;
+}
+
+.app-name {
+    padding-top: 1.4rem;
+}
+
+.ab-story {
+    display: block;
+    text-align: center;
+}
+
+.story-container {
+    gap: 2rem;
+}
+
+.st-1, .st-2 {
+    gap: 3rem;
+    padding-bottom: 4rem;
+    justify-content: center;
+}
+
+.st-1 p {
+    width: 40%;
+}
+
+.st-2 p {
+    width: 60%;
+}
+
+
+.st-1 img {
+    width: 380px;
+    height: 200px;
+    padding-left: 2rem;
+}
+
+.st-2 img {
+    width: 200px;
+    height: 180px;
+}
+
+.impact-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+.impact-box {
+    font-family: 'Playfair Display';
+    padding: 2rem;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+    margin: 2rem;
+    width: 100vw;
+    background-color: #D9D8D5;
+    text-align: center;
+}
+
+.impact-box span {
+    margin: 0 0.5rem;
+    font-weight: bold;
+    color: #567257;
+    font-size: 1.5rem;
+}
+
+.impact-box h4{
+    color: #6E584A;
+    font-size: 1.2rem;
+}
+
+.team-container, .community-container, 
+.pricing-container {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    justify-content: center;
+    align-items: center;
+    margin: 4rem;
+}
+
+.team-list {
+    gap: 2rem;
+}
+
+.team-list p, .ct-title p, .ct-title h2,
+.pc-title p, .pc-title h1, .pc-card p, .pc-card h1 {
+    margin: 0;
+}
+.team-details {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.team-details img {
+    width: 200px;
+    height: 200px;
+}
+
+.ct-title, .pc-title {
+    text-align: center;
+}
+
+#pc-t {
+    font-weight: 600;
+    font-size: 2rem;
+    font-family: 'Playfair Display';
+}
+
+.pc-pricing {
+    margin-bottom: 0.5rem;
+}
+.pc-name {
+    font-family: 'Playfair Display';
+    font-size: 1.4rem;
+    font-weight: bold;
+}
+
+.pc-left {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    color: #896A58;
+    margin-right: 1rem;
+}
+
+.pc-content {
+    gap: 2rem;
+    margin: 2rem 0;
+}
+.pc-card {
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+    min-width: 220px;
+    color: #896A58;
+    padding: 2rem 1.5rem;
+    border: 1px solid #896A58;
+    background-color: #D9D8D5;
+    border-radius: 8px;
+    box-shadow: 0 4px 15px rgba(0,0,0,0.05);
+}
+
+.pc-right {
+    gap: 1.5rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+.pc-price {
+    font-size: 3.2rem;
+}
+
+
+.benefits {
+    display: flex;
+    flex-direction: row;
+    gap: 0.5rem;
+    justify-content: baseline;
+    align-items: baseline;
+}
+
+.member-card-container {
+    border: 1px solid #6E584A;
+    border-radius: 8px;
+    background-color: #D9D8D5;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+    width: 30vw;
+    padding: 1rem 1.5rem;
+    margin-right: 2rem;
+}
+
+.member-card-container h3 {
+    font-weight: bolder;
+}
+
+.member-info {
+    display: grid;
+    gap: 1rem;
+    grid-template-columns: 1fr auto;
+}
+
+.pm-row {
+    width: 20vw;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.change-btn {
+    color: #896A58;
+}
+
+.subs-card {
+    display: flex;
+    flex-direction: row;
+}
+
+.subs-img {
+    width: 150px;
+    height: 150px;
+}
+
+.subs-row {
+    align-items: baseline;
+    margin-top: 1.8rem;
+    display: grid;
+    gap: 1rem;
+    grid-template-columns: 2fr 2fr 1fr;
+}
+
+.period {
+    color: white;
+    background-color: #D9D8D5;
+    border-radius: 4px;
+    padding: 0.5rem;
+}
+
+.subs-title{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.ps-title {
+    margin-top: 4rem;
+}
+
+.rw-card, .pts-overlay {
+    border: 1px solid #3B4E3C;
+    border-radius: 8px;
+    padding: 4rem 4rem;
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+    justify-content: center;
+    align-items: center;
+    width: 200px;
+}
+
+.rw-top {
+    width: 80vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.rw-logo {
+    height: 20px;
+}
+
+.rw-card {
+    position: relative;
+}
+.pts-overlay {
+    width: 300px;
+    text-align: center;
+    gap: 0.2rem;
+    background-color: #D9D8D5;
+    border: none;
+    flex-direction: column;
+    position: absolute;
+    opacity: 0.8;
+}
+
+.rw-coin {
+    width: 12px;
+    height: 12px;
+    padding: 0.2rem;
+    border: 1px solid #3B4E3C;
+    border-radius: 100%;
+}
+
+.pts {
+    margin-left: 1rem;
+    display: flex;
+    flex-direction: row;
+    gap: 0.4rem;
+}
+
+.pts-num {
+    font-weight: bold;
+}
+
+.tips-section {
+    margin: 4rem 0rem;
+}
+
+.tips-section h3 {
+    margin-bottom: 1rem;
+}
+
+.tips-row {
+    align-items: center;
+    display: grid;
+    grid-template-columns: 2fr 1fr 1fr;
+    margin: 0.5rem 0;
+}
+
+.go-btn {
+    background-color: #567257;
+    border: none;
+    color: white;
+    padding: 0.4rem;
+    border-radius: 4px;
+    width: 4rem;
+}
+
+.grey-bar {
+    height: 10px;
+    width: 100%;
+    border-radius: 8px;
+    background-color: #ACAB9E;
+}
+
+.green-bar {
+    height: 10px;
+    width: 60%;
+    border-radius: 8px;
+    background-color: #567257;
+}
+
+.progress-bar p {
+    text-align: right;
+}
+
+.category-row {
+    gap: 1rem;
+    margin-bottom: 3rem;
+}
+
+.help-category {
+    box-shadow: 1px 1px 1px;
+    border: none;
+    padding: 1rem;
+    color: #6E584A;
+    background: none;
+}
+
+.help-category:hover {
+    color: white;
+    background-color: #6E584A;
+}
+
+.quest-title {
+    margin-top: 4rem;
+    text-align: center;
+}
+
+.quest-section {
+    gap: 6rem;
+    justify-content: center;
+    align-items: center;
+}
+
+.contact-box h4, .contact-box p {
+    margin: 0;
+}
+
+.contact-box {
+    display: flex;
+    align-items: baseline;
+    flex-direction: row;
+    gap: 1rem;
+}
+
+.contact-box i {
+    color: #D9D8D5;
+}
+
+.contact-box {
+    color: black;
+}
+
+.paragraph{
+    color: black;
+    text-align: left;
+}
+
+.tc-content, .pc-content {
+    height: 50vh;
+    width: 50vw;
+    overflow: scroll;
+}
 /*Responsive design: MEDIUM OR TAB*/
 @media (max-width: 1000px) {
     body {
@@ -2189,9 +2628,7 @@ input[type="email"]:disabled, input[type="password"]:disabled,
     .section-menu button {
         padding: 0.5rem 1rem;
     }
-    .section-title {
-        font-size: 1.2rem;
-    }
+    
 
     .section-container {
         flex-direction: column;
@@ -2320,5 +2757,40 @@ input[type="email"]:disabled, input[type="password"]:disabled,
     align-self: flex-end;
     display: block;
   }
+
+  .team-details img {
+    width: 100px;
+    height: 100px;
+}
+
+    .st-1 {
+        flex-direction: column;
+    }
+
+    .st-1 p {
+        width: 90%;
+    }
+
+    .pc-right {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .pc-card {
+        width: auto;
+    }
+
+    .rewards-tips {
+        flex-direction: column;
+    }
+
+    .tips-row {
+        grid-template-columns: 0.2fr 0.2fr 0.2fr;
+    }
+
+    .paragraph {
+        width: 50%;
+    }
+
 }
 
